# Search_Algorithms

./: .gitignore  A_Star.cpp  BFS_With_Map.cpp  CMakeLists.txt  DFS_On_Map.cpp  Dijkstra_On_Map.cpp  README.md  Weighted_A_star.cpp
maze_generator/: df_maze.py  maze_generator.py
